Some file's update did not get pushed when uploading to repo

--- a/LOL extension/popup.html
+++ b/LOL extension/popup.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<!-- 
+    <head>
     <link rel="stylesheet" href="popup.css">
 </head>
 
@@ -49,6 +50,6 @@
 <div class="ModalSuggestion">
 
 </div>
-</body>
+</body> -->
 
 </html>
